CPPD-1: Replaced the physical files of static lib with the compiled one out of swift code based static lib.

--- a/CPPIntegrationDemo.xcodeproj/xcshareddata/xcschemes/CPPIntegrationDemo.xcscheme
+++ b/CPPIntegrationDemo.xcodeproj/xcshareddata/xcschemes/CPPIntegrationDemo.xcscheme
@@ -37,6 +37,11 @@
                BlueprintName = "CPPIntegrationDemoTests"
                ReferencedContainer = "container:CPPIntegrationDemo.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "CPPIntegrationDemoTests/testCustom()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
